2007-10-08  Akim Demaille  <demaille@gostai.com>

	Improve autoconf style.
	This macro is a big piece of shit written by people who
	understand nothing about Autoconf.  We should clean it, and
	contribute it under the name of Gostai.
	* ax_boost.m4: Improve shell coding style.

2007-10-07  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Disable one more useless warning of MSVC.
	* urbi-prog-cxx.m4: Disable warning C4512.

2007-10-07  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Disable a warning for GCC MinGW 3.4.5.
	* urbi-prog-cxx.m4: Use -Wno-uninitialized on Windows with GCC
	because of the annoying false positive of GCC MinGW 3.4.5 which
	interferes with -Werror.

2007-10-06  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix boost cross-compilation support.
	* ax_boost.m4,
	* ax_boost_thread.m4: Make decisions based on $host_os, not
	$build_os.

2007-10-06  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix detection of Windows for Boost.
	* ax_boost.m4,
	* ax_boost_thread.m4: Look for `mingw32' and not `ming32'.  Also
	handle cygwin.

2007-10-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do the float-function checks in C++ mode.
	* urbi-float-check.m4 (URBI_FLOAT_CHECK): Here.

2007-10-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Change the search order for Boost.
	* ax_boost_base.m4 (AX_BOOST_BASE): Change the search order
	from `/usr /usr/local /opt /opt/local'
	to   `/usr/local /opt/local /usr /opt'.  Rationale: There could be a
	version of boost installed under /usr (typically by the packaging
	system) overridden manually by the administrator (typically under
	/usr/local).  That's why it's better to have /usr and /opt at the
	end.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Check for the `trunc' function.
	Like `round', it is not available on mipsel-linux-g++.
	* urbi-float-check.m4 (URBI_FLOAT_CHECK): Here.
	* urbi-libport.m4 (_URBI_LIBPORT_COMMON): Invoke URBI_FLOAT_CHECK.
	* urbi-ufloat.m4 (URBI_UFLOAT): No longer invoke URBI_FLOAT_CHECK.
